--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .swiper-controls {
-  position: absolute !important;
+ /* position: absolute !important;*/
   pointer-events: none;
   width: 100%;
   height: 100%;
@@ -8,7 +8,9 @@
   left: 0;
 }
 .swiper-controls .swiper-navigation {
-  pointer-events: all;
+    pointer-events: all;
+    position: relative;
+    top: -50%;
 }
 .swiper-controls .swiper-navigation .swiper-button {
   background: rgba(255, 255, 255, 0.7);
