--- a/css/par_slider.css
+++ b/css/par_slider.css
@@ -608,7 +608,7 @@
 .swiper-slide {
   flex-shrink: 0;
   width: 100%;
-  height: auto;
+  height: 100vh;
   position: relative;
   transition-property: transform
 }
