--- a/templates/paragraph--paragraph-slider-item.html.twig
+++ b/templates/paragraph--paragraph-slider-item.html.twig
@@ -51,7 +51,7 @@
     paragraph.field_paragraph_set_bg.value|render|trim ? 'bg-image'
   ]
 %}
-<div{{ attributes.addClass(classes) }} {% if paragraph.field_paragraph_set_bg.value|render|trim %} data-image-src="{{ img_url }}" {% endif %} data-swiper-autoplay="1000">
+<div{{ attributes.addClass(classes) }} {% if paragraph.field_paragraph_set_bg.value|render|trim %} data-image-src="{{ img_url }}" {% endif %}>
   {% if paragraph.field_paragraph_slider_content.value|render|trim %}
     {{ content|without('field_paragraph_slider_ex_cls','field_paragraph_slider_image','field_paragraph_set_bg') }}
   {% endif %}
